feat: Implement XML serialization improvements and performance enhancements
- Added minified XML serialization method in XmlHelper for compact output.
- Updated tests to validate compact XML signing functionality.
- Enhanced UblKitProperties to support connection timeout in milliseconds and max connections.
- Introduced HttpClientNativoFactory for consistent HTTP client configuration with connection pooling.
- Implemented streaming serialization for large invoices in SerializadorXmlFactura to reduce memory usage.
- Precompiled XSL templates in ValidadorSunatXsl to improve validation performance.
- Added unit tests for streaming serialization and XSL template precompilation.

Signed-off-by: Edwin Luis Barboza Pinedo <ibarboza27498@gmail.com>